--- a/005_comparing_groups_tables_and_visualizations/001_comparing_groups_tables_and_visualizations.qmd
+++ b/005_comparing_groups_tables_and_visualizations/001_comparing_groups_tables_and_visualizations.qmd
@@ -17,6 +17,7 @@ editor: visual
 library(tidyverse)
 library(skimr)
 library(DT)
+library(scales)
 ```
 
 # Import data
@@ -93,14 +94,92 @@ subscriber_by_segment_home_ownership |>
 
 ## Visualization by groups
 
+### More than 2 groups
+
 When grouping by ownership house status and segment the percentage of subscribers of my product is low.
 
 ```{r}
 subscriber_by_segment_home_ownership |> 
   ggplot() +
   geom_col(aes(x = subscribe, 
-               y = number_percentage)) +
+               y = number_percentage),
+           color = "black",
+           fill = "#7ED4AD") +
   facet_wrap(facets = vars(ownHome, 
                            Segment), 
              nrow = 2, ncol = 4)
+```
+
+### Proportions by group
+
+Question 4: What proportion of clients are subscribers by segment?
+
+```{r}
+prop_table <- segmentation |> 
+  select(Segment, subscribe) |> 
+  count(Segment, subscribe) |> 
+  group_by(Segment) |> 
+  mutate(pct_subscribers = n / sum(n)) |> 
+  ungroup() |> 
+  filter(subscribe == "subYes") |> 
+  mutate(Segment = fct_reorder(.f = Segment,
+                               .x = pct_subscribers))
+
+prop_table |> 
+  ggplot() + 
+  geom_col(aes(x = pct_subscribers, 
+               y = Segment),
+           color = "black",
+           fill = "#7ED4AD") + 
+  labs(x = "Proportion of subscribers",
+       y = "",
+       title = "Proportions of subscribers by segment")
+```
+
+### Grouping with a continuous variable
+
+```{r}
+#| message: false
+
+mean_income_by_seg_ownhome <- segmentation |> 
+  select(income, ownHome, Segment) |> 
+  group_by(Segment, ownHome) |> 
+  summarise(mean_income = mean(income)) |> 
+  ungroup()
+
+mean_income_by_seg_ownhome |> 
+  ggplot() + 
+  geom_col(aes(x = Segment, y = mean_income,
+               fill = ownHome),
+           position = position_dodge(),
+           color = "black") + 
+  scale_fill_manual(values = c("#7ED4AD", 
+                               "#D76C82")) +
+  labs(x = "",
+       y = "Mean disposable income (US Dollars)",
+       fill = "Owning home status",
+       title = "Comparing of mean income by segment and owning home status")
+  
+```
+
+### Grouping with a continuous variable using more than 1 category
+
+```{r}
+income_distribution_by_seg_ownhome <- segmentation |> 
+  select(income, ownHome, Segment) |>
+  mutate(Segment = fct_reorder(.f = Segment,
+                               .x = income))
+  
+income_distribution_by_seg_ownhome |>    
+  ggplot() + 
+  geom_boxplot(aes(x = income, y = Segment,
+                   fill = ownHome)) + 
+  scale_fill_manual(values = c("#7ED4AD", 
+                               "#D76C82")) +
+  scale_x_continuous(labels = label_dollar(scale = 0.01)) +
+  facet_wrap(facets = vars(ownHome)) + 
+  labs(x = "Disposable income in thousands (USD dollars)",
+       y = "",
+       fill = "Owning home status",
+       title = "Distribution of income by owning home status and segment")
 ```
